--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"macro-css": "^1.0.4",
 		"node-sass": "^4.14.1",
 		"react": "^17.0.2",
+		"react-content-loader": "^6.2.0",
 		"react-dom": "^17.0.2",
 		"react-router-dom": "^5.3.4",
 		"react-scripts": "4.0.3",
